feat: setup docs

--- a/pages/setup/using-dashboard.mdx
+++ b/pages/setup/using-dashboard.mdx
@@ -1,3 +1,5 @@
+# Using dashboard
+
 ## Create a Project
 
 To begin using Unbody for a project, you first need to create a project space 😄. Each project serves as a separate container for your data:
