--- a/pages/setup/index.mdx
+++ b/pages/setup/index.mdx
@@ -1,3 +1,8 @@
+# Setup
+
+- [Using Dashboard](/setup/using-dashboard)
+- [Using SDK](/setup/using-sdk)
+
 ### **Choosing Between SDK and Dashboard**
 
 - **SDK:** Best for developers who prefer automation and programmatic access.
