fix: inner page links

--- a/pages/backend-layer/data-processing.mdx
+++ b/pages/backend-layer/data-processing.mdx
@@ -52,6 +52,6 @@ Unbody’s processing is **modular, flexible, and built for real-world challenge
 - **Plugin-based design** lets you modify or create your own strategies.
 - **Fully integrated into the Backend Layer**, eliminating the need for external scripts or manual steps.
 
-For more details, visit [Data Processing](https://www.notion.so/Data-processing-3745c593c3394d7cbbcbd3b97c380b41?pvs=21) in Developer Workflows
+For more details, visit [Data Processing](/project-configurations/data-processing-workflows) in Developer Workflows
 
 Next: Data Enrichment to see how context and metadata are added to your data.
