--- a/pages/manifesto.mdx
+++ b/pages/manifesto.mdx
@@ -62,4 +62,4 @@ Stop bolting AI onto old tools. Build AI-native.
 
 Sick of fighting your stack?
 
-Let’s build smarter. Start here: [Getting Started](https://www.notion.so/getting-started/index.md)
+Let’s build smarter. Start here: [Getting Started](/setup)
