fix: removed page card

--- a/pages/get-started/step-2-building.mdx
+++ b/pages/get-started/step-2-building.mdx
@@ -1,5 +1,3 @@
-import { PageCard } from "@/components/PageCard";
-import { PageItems } from "@/components/PageItems";
 import { Tab, Tabs } from "@nextui-org/react";
 
 # Start building with Unbody
@@ -67,25 +65,9 @@ This is how you can authorize your API calls.
 ### Make Your First API Call
 Below is a guide tailored to the type of sources and files in your projects. Please follow the steps that apply to your situation.
 
-<PageItems>
-    <PageCard title={"Google Drive with Google Docs"}
-              description={"Choose this option if you have a Google Drive with Google Docs."}
-              link={"/docs/get-started/step-2-building/build-with-googledrive"}
-              icon={"/provider-icons/Drive.svg"}
-    />
-    <PageCard title={"Discord Channel with Messages"}
-              description={"Choose this option if you have a Discord Channel with Messages."}
-              link={"/docs/get-started/step-2-building/build-with-discord"}
-              icon={"/provider-icons/Discord.svg"}
-    />
-    <PageCard title={"Github Issues with Comments"}
-              description={"Choose this option if you have a Github Issues with Comments."}
-              link={"/docs/get-started/step-2-building/build-with-github"}
-              icon={"/provider-icons/Github.svg"}
-    />
-    <PageCard title={"Text Blocks"}
-              description={"Choose this option if you want to work with text blocks regardless of their sources."}
-              link={"/docs/get-started/step-2-building/build-with-textblocks"}
-              icon={"/icons/menu-board.svg"}
-    />
-</PageItems>
+
+- [Build with Google Drive](/get-started/step-2-building/build-with-googledrive)
+- [Build with Discord](/get-started/step-2-building/build-with-discord)
+- [Build with Github](/get-started/step-2-building/build-with-github)
+- [Build with Textblocks](/get-started/step-2-building/build-with-textblocks)
+
