fix: unbody package installation

--- a/pages/get-started/step-1-setup/setup-with-sdk.mdx
+++ b/pages/get-started/step-1-setup/setup-with-sdk.mdx
@@ -12,17 +12,17 @@ Install Unbody's core packages to get started:
 <Tabs items={['npm', 'yarn', 'pnpm']}>
   <Tabs.Tab>
     ```bash
-    npm install @unbody/admin @unbody/push @unbody/utils @unbody-react
+    npm install unbody
     ```
   </Tabs.Tab>
   <Tabs.Tab>
     ```bash
-    yarn add @unbody/admin @unbody/push @unbody/utils @unbody-react
+    yarn add unbody
     ```
   </Tabs.Tab>
   <Tabs.Tab>
     ```bash
-    pnpm add @unbody/admin @unbody/push @unbody/utils @unbody-react
+    pnpm add unbody
     ```
   </Tabs.Tab>
 </Tabs>
