--- a/pages/development-references/data-ingestion/overview.mdx
+++ b/pages/development-references/data-ingestion/overview.mdx
@@ -1,4 +1,4 @@
-# Data Ingestion
+# Overview
 
 Every AI-native application starts with data. But data is scattered—stored across platforms, in different formats, and often unstructured. Collecting and preparing this data is the first step in building anything AI-ready.
 
@@ -36,11 +36,3 @@ For everything else, there’s the **Push API**. Use this when you need to:
 - Ingest data in any format, structured or unstructured.
 
 The Push API is flexible and works with non-standard or unique data sources. Learn more about the Push API.
-
----
-
-### Why Unbody’s Ingestion Stands Out
-
-Unbody was built to handle the messiness of modern data. Whether it’s documents in Google Drive, conversations in Discord, or a custom source, Unbody simplifies ingestion and prepares your data for the next step.
-
-Next: Data Processing to see how raw data becomes AI-ready.
