major navigation changes

--- a/pages/api-layer.mdx
+++ b/pages/api-layer.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components'
+
 # **API Layer**
 
 The **API Layer** is how you interact with Unbody’s backend. It provides a set of programmatic interfaces for managing data, retrieving enriched content, and integrating AI-native capabilities into your applications. Designed to be intuitive and flexible, the API Layer supports a wide range of use cases, from querying vectorized data to managing custom schemas.
@@ -6,12 +8,11 @@ Unbody's API Layer is divided into several components, each serving a specific p
 
 ---
 
-<aside>
-⚠️
 
-Unbody provides a **Typescript SDK** for all APIs, making integration simpler and more efficient. The SDK abstracts low-level API calls, so you can focus on building functionality without worrying about the details of HTTP requests.
-
-</aside>
+ 
+<Callout>
+  Unbody provides a **Typescript SDK** for all APIs, making integration simpler and more efficient. The SDK abstracts low-level API calls, so you can focus on building functionality without worrying about the details of HTTP requests.
+</Callout>
 
 ### GraphQL API
 
