--- a/pages/api-layer.mdx
+++ b/pages/api-layer.mdx
@@ -80,4 +80,4 @@ Like the Image API, the Audio/Video API is exclusive to **Unbody Cloud**. Suppor
 
 ### What’s Next?
 
-The API Layer bridges your application and Unbody’s backend. For integrating the outputs into your frontend, explore the [Frontend Layer](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/c/frontend-layer.md).
+The API Layer bridges your application and Unbody’s backend. For integrating the outputs into your frontend, explore the [Frontend Layer](/frontend-layer).
