--- a/pages/backend-layer.mdx
+++ b/pages/backend-layer.mdx
@@ -93,4 +93,4 @@ Traditional backends were designed for static storage and retrieval. Unbody’s 
 
 ### What’s Next?
 
-The Backend Layer transforms your data. To interact with it in your application, explore the [API Layer](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/c/api-layer.md).
+The Backend Layer transforms your data. To interact with it in your application, explore the [API Layer](/api-layer).
