--- a/pages/data-ingestion/prebuilt-integrations.mdx
+++ b/pages/data-ingestion/prebuilt-integrations.mdx
@@ -14,22 +14,22 @@ Current prebuilt providers include:
     
     Ingest files and documents directly from your Google Drive account.
     
-    [Learn More →](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/data-providers/google-drive.md)
+    [Learn More →](/providers/google-drive)
     
 - **Discord**
     
     Pull messages and content from Discord channels for applications like chat analysis or moderation tools.
     
-    [Learn More →](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/data-providers/discord.md)
+    [Learn More →](/providers/discord)
     
 - **GitHub**
     
     Import repositories, commit histories, and metadata as inputs for AI workflows.
     
-    [Learn More →](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/data-providers/github.md)
+    [Learn More →](/providers/github)
     
 
-For a full list of data providers and their capabilities, visit the [Data Providers Section →](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/data-providers/index.md).
+For a full list of data providers and their capabilities, visit the [Data Providers Section →](/providers/overview).
 
 ---
 
@@ -54,5 +54,5 @@ For a full list of data providers and their capabilities, visit the [Data Provid
 
 Unbody regularly expands its list of prebuilt data providers. If your platform isn’t listed, you can:
 
-- Request a new provider through the [Data Providers Section](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/data-providers/index.md).
+- Request a new provider through the [Data Providers Section](/providers/overview).
 - Use the **Push API** to create custom ingestion workflows.
