--- a/pages/project-configurations/generative-modules.mdx
+++ b/pages/project-configurations/generative-modules.mdx
@@ -88,7 +88,7 @@ Unbody supports multiple providers and models. Below is a list of supported opti
 | **Cohere** | Command | Optimized for content generation tasks. |
 | **Mistral** | OpenMixtral 8x7b | Lightweight, scalable option for RAG. |
 
-For a full list of available models, refer to the [Model Reference Documentation](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/c/67507163-dcf0-8010-b9e4-c34973cf40c6#).
+For a full list of available models, refer to the [Model Reference Documentation](/project-configurations/generative-modules).
 
 ---
 
