--- a/pages/project-configurations/vectorizers.mdx
+++ b/pages/project-configurations/vectorizers.mdx
@@ -29,7 +29,7 @@ Unbody supports two main types of vectorizers:
         - **Img2Vec-Neural**: Default vectorizer for image processing.
         - **Multi2Vec-Clip**: Advanced multimodal image-to-text vectorizer (coming soon).
 
-For a complete list of available vectorizers, refer to the [Vectorizers Reference](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/c/67507163-dcf0-8010-b9e4-c34973cf40c6#).
+For a complete list of available vectorizers, refer to the [Vectorizers Reference](/project-configurations/vectorizers).
 
 ---
 
@@ -100,7 +100,7 @@ You can also configure vectorizers directly from the Unbody dashboard:
 3. Choose the vectorizer model for text or image data.
 4. Save your changes.
 
-For detailed instructions, see the [Dashboard Configuration Guide](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/c/67507163-dcf0-8010-b9e4-c34973cf40c6#).
+For detailed instructions, see the [Dashboard Configuration Guide](/get-started/step-1-setup/setup-with-dashboard).
 
 ---
 
@@ -150,5 +150,5 @@ Once vectorizers are configured:
 
 For further details, explore:
 
-- [Vectorizers Reference](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/c/67507163-dcf0-8010-b9e4-c34973cf40c6#)
-- [Admin API Documentation](https://chatgpt.com/g/g-9N3RT50W3-unbody-ea/c/67507163-dcf0-8010-b9e4-c34973cf40c6#)
+- [Vectorizers Reference](/project-configurations/vectorizers)
+- [Admin API Documentation](/get-started/step-1-setup/setup-with-sdk)
