--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -62,4 +62,4 @@ Stop bolting AI onto old tools. Build AI-native.
 
 Sick of fighting your stack?
 
-Let’s build smarter. Start here: [Getting Started](/setup)
+Let’s build smarter. Start here: [Getting Started](/get-started)
