--- a/pages/graphql-api/search/keyword-search.mdx
+++ b/pages/graphql-api/search/keyword-search.mdx
@@ -1,6 +1,6 @@
 import {Tab, Tabs} from "@nextui-org/react";
 
-Keyword search is a method that allows users to search your data based on specific keywords. Unlike [semantic search](/docs/api/semantic-search) which focuses on the meaning of the search query, keyword search relies on exact matches of the keywords used in the search query.
+Keyword search is a method that allows users to search your data based on specific keywords. Unlike [semantic search]/graphql-api/semantic-search) which focuses on the meaning of the search query, keyword search relies on exact matches of the keywords used in the search query.
 
 This method is best to use when you want to provide quick and straightforward search results. It is especially effective when dealing with large databases where users are familiar with the specific keywords used within the data.
 
