--- a/pages/get-started/step-1-setup/setup-with-dashboard.mdx
+++ b/pages/get-started/step-1-setup/setup-with-dashboard.mdx
@@ -25,7 +25,7 @@ This step will happen all on [Unbody’s dashboard](https://app.unbody.io/projec
 
         ### Connect Unbody to your source
 
-        Allow Unbody to access your content from the selected provider. Learn more about this on [our privacy page](https://github.com/unbody-io/docs.unbody.io/?tab=MIT-1-ov-file#readme).
+        Allow Unbody to access your content from the selected provider. Learn more about this on [our privacy page](https://unbody.io/privacy).
         ![Add a source source](/images/docs/get-started/connect.jpg)
 
         ### Set an entry point
