--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,4 @@
-# Hello, [New] World
-
+# Hello, [New] World!
 Users don’t want data. They want answers.
 
 Apps need to speak, think, and solve.
@@ -9,6 +8,8 @@ Old tools can’t build this.
 We need new tools. Tools for AI-native products.
 
 That’s why we built **Unbody**.
+
+![alt text](/images/docs/amir-quote.png "Title")
 
 ## AI-Native vs. AI-Enabled
 
@@ -62,4 +63,4 @@ Stop bolting AI onto old tools. Build AI-native.
 
 Sick of fighting your stack?
 
-Let’s build smarter. Start here: [Getting Started](/setup)
+Let’s build smarter. Start here: [Getting Started](/get-started).
