--- a/pages/get-started/introduction.mdx
+++ b/pages/get-started/introduction.mdx
@@ -2,10 +2,11 @@ import { Steps, Callout } from 'nextra/components'
 
 ## Getting Started
 
-Building AI-native products with Unbody begins with two main steps: **Configuration** and **Usage**. This page will walk you through the essentials so you can start building with Unbody right away.
+Building AI driven products with Unbody begins with two main steps: **Configuration** and **Usage**. This page will walk you through the essentials so you can start building with Unbody right away.
 
-Think of Unbody as a **new-age MERN or MEAN stack**—but reimagined for the AI-native era. From data ingestion to APIs, it provides everything you need to build modern, scalable AI-driven products without the complexity of piecing together multiple tools.
-Before diving into the steps, it's essential to understand why Unbody exists, so make sure to read [Why Unbody?](/why) to get a clear picture of the challenges it solves.
+Think of Unbody as a **new-age MERN or MEAN stack**—but reimagined for the AI era. From data ingestion to APIs, it provides everything you need to build modern, scalable AI-driven products without the complexity of piecing together multiple tools.
+
+> Before diving into the steps, it's probably helpful to understand why Unbody exists, read [Why Unbody?](/why) to get a clear picture of the challenges it solves.
 
 ## How Unbody Works
 
