--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,66 +1,16 @@
-# Hello, [New] World!
-Users don’t want data. They want answers.
+import { Callout } from 'nextra/components'
 
-Apps need to speak, think, and solve.
+# Build the Future with Unbody
 
-Old tools can’t build this.
+Unbody is a unified AI-native development stack. It helps you:
 
-We need new tools. Tools for AI-native products.
+- **Start AI-first:** If you’re building AI-native products from scratch, Unbody handles data ingestion, vectorization, and serving—no duct tape required.
+- **Add AI features to what you have:** If you already have a product and want to seamlessly integrate AI-driven capabilities, Unbody plugs right in.
 
-That’s why we built **Unbody**.
+## Get Oriented
 
-![alt text](/images/docs/amir-quote.png "Title")
+- [**Why Unbody?**](/why) — Understand the shift to AI-native development and why old stacks no longer cut it.
+- [**Manifesto**](/manifesto) — See what we stand for and how we’re building a future built for AI-native products.
+- [**Get Started**](/get-started) — Dive into setup, ingestion, and making your data AI-ready.
 
-## AI-Native vs. AI-Enabled
-
-**AI-native**: AI is the core. Remove it, nothing works.
-
-**AI-enabled**: AI is bolted on. Remove it, and the app still exists.
-
-AI-enabled is the past. AI-native is the future.
-
-We’re here to build the future.
-
-## Duct-Taped Stacks
-
-Two stacks. Two headaches.
-
-1. **AI stack**: LangChain, LLamaindex, [Unstrcutred.io](http://Unstrcutred.io), Vercel SDK, vector DBs, pipelines.
-2. **Product stack**: React, Express, MERN.
-
-They don’t talk. You duct-tape them together.
-
-It’s slow. It’s messy. It’s painful.
-
-Old tools weren’t built for AI-native apps. They’re solving yesterday’s problems.
-
-## One Stack to Rule Them All
-
-**One stack.** No mess. No hacks.
-
-- Ingest, process, vectorize—all in one place.
-- Deliver AI-powered data via a single GraphQL API.
-- AI and product development? Together at last.
-
-## How Unbody is Different
-
-We build **AI products**, not features.
-
-**Others**:
-
-- LangChain, LlamaIndex: Built for AI engineers. Fragmented.
-- Vercel AI SDKs: Basic proxies. No full stack.
-- OpenAI, Cohere: Just the model, nothing more.
-
-**Unbody**:
-
-- Unified. Seamless. Model-agnostic.
-- One stack, one workflow.
-
-Stop bolting AI onto old tools. Build AI-native.
-
-## Let’s Get Smarter
-
-Sick of fighting your stack?
-
-Let’s build smarter. Start here: [Getting Started](/get-started).
+> Unbody lets you stop gluing together multiple tools. Instead, focus on building intelligent, AI-driven features and products—fast.
