fix broken imports and add arch image

--- a/pages/core-architecture-overview.mdx
+++ b/pages/core-architecture-overview.mdx
@@ -1,6 +1,8 @@
 
 # Architecture Overview
 
+![Unbody Architecture Overview](/images/docs/arch.png)
+
 To understand Unbody’s architecture, it’s important to first understand its philosophy—and why it exists.
 
 We created Unbody to address a fundamental problem: the fragmented nature of existing tools and frameworks. These tools were designed to add AI as a feature to existing products, not to build truly **AI-native products**. Our goal was to build a tool that could enable developers—especially those from product backgrounds—to create **AI-native products** effortlessly and without needing specialized AI expertise.
