fiox broken link

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,7 +9,7 @@ Unbody is a unified AI-native development stack. It helps you:
 
 ## Get Oriented
 
-- [**Get Started**](/get-started) — Dive into setup, ingestion, and making your data AI-ready.
+- [**Get Started**](/get-started/introduction) — Dive into setup, ingestion, and making your data AI-ready.
 ---
 - [**Why Unbody?**](/why) — Understand the shift to AI-native development and why old stacks no longer cut it.
 - [**Manifesto**](/manifesto) — See what we stand for and how we’re building a future built for AI-native products.
