--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,15 +1,51 @@
-import { Callout } from 'nextra/components'
+import {Callout, Cards} from 'nextra/components'
 
 # Build the Future with Unbody
 
-Unbody is a unified AI-native development stack. It helps you:
+Apps today must **think, speak, and solve problems**, but traditional development stacks—built for static data and CRUD workflows—can’t support this shift. Whether you’re adding AI to existing products (AI-enabled) or building apps where AI is the DNA (AI-native), traditional stacks quickly fall apart.
 
-- **Start AI-first:** If you’re building AI-native products from scratch, Unbody handles data ingestion, vectorization, and serving—no duct tape required.
-- **Add AI features to what you have:** If you already have a product and want to seamlessly integrate AI-driven capabilities, Unbody plugs right in.
+Unbody is a unified development stack for the AI era. It replaces fragmented workflows with a single system. From **data ingestion** to **vectorization**, from **semantic APIs** to **deployment**, Unbody gives you everything you need in one place—no duct tape, no fragile workflows.
 
-## Get Oriented
+Think of Unbody as a modern replacement for **MERN** or **MEAN**, but rebuilt for AI.
 
-- [**Get Started**](/get-started/introduction) — Dive into setup, ingestion, and making your data AI-ready.
----
-- [**Why Unbody?**](/why) — Understand the shift to AI-native development and why old stacks no longer cut it.
-- [**Manifesto**](/manifesto) — See what we stand for and how we’re building a future built for AI-native products.
+Unbody can help you in two key ways:
+- **Start AI-first**: Build AI-native products from scratch, like a smarter Wikipedia, or Preplexity for your own data.
+- **Add AI features**: Integrate AI-driven capabilities into your existing apps, like chatbots, semantic search, or recommendation engines.
+
+## What Unbody Offers
+- **[Semantic Database](https://weaviate.io/)**: Vectorized storage for semantic search and dynamic relationships.
+- **AI Pipeline**: Seamlessly ingest, clean, vectorize, and enrich data.
+- **AI Integration**: Connect [OpenAI](https://openai.com/), [Cohere](https://cohere.com/), [Mistral](https://mistral.ai/), or your custom models.
+- **Intelligent GraphQL API**: Deliver generative responses, semantic search, and recommendations.
+- **Media Tools**: On-the-fly image processing, video streaming, and a global CDN.
+- **Function Calling (Coming Soon)**: Build systems that think, act, and solve problems autonomously.
+
+## Ready to start
+Now that you know what Unbody is, it’s time to get hands-on.
+<Cards>
+    <Cards.Card title={"Get Started"}
+                href={"/get-started/introduction"}
+                arrow={true}>
+        <small className={"ml-4 opacity-75"}>
+            Start building with Unbody right away.
+        </small>
+    </Cards.Card>
+</Cards>
+
+## Need to know more about Unbody?
+<Cards>
+    <Cards.Card title={"Why Unbody?"}
+                href={"/why"}
+                arrow={true}>
+        <small className={"ml-4 opacity-75"}>
+            Understand the shift to AI-native development.
+        </small>
+    </Cards.Card>
+    <Cards.Card title={"Manifesto"}
+                href={"/manifesto"}
+                arrow={true}>
+        <small className={"ml-4 mr-4 opacity-75"}>
+            See what we stand for.
+        </small>
+    </Cards.Card>
+</Cards>
